--- a/DiscordConnector/DiscordConnector.csproj
+++ b/DiscordConnector/DiscordConnector.csproj
@@ -40,42 +40,67 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3"
-      PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
-    <!-- These dependencies are thinned out to only what's needed for DiscordConnector -->
-    <!-- (not sure if it matters) -->
-    <!-- Harmony and BepInEx dependency -->
-    <Reference Include="0Harmony, Version=2.9.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(GamePath)\BepInEx\core\0Harmony.dll</HintPath>
+    <Reference Include="0Harmony">
+      <HintPath>..\valheimdll\0Harmony_publicized.dll</HintPath>
     </Reference>
-    <Reference Include="BepInEx, Version=5.4.22.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(GamePath)\BepInEx\core\BepInEx.dll</HintPath>
+    <Reference Include="assembly_googleanalytics">
+      <HintPath>..\valheimdll\assembly_googleanalytics_publicized.dll</HintPath>
     </Reference>
-    <!-- Valheim Assembly Dependencies -->
-    <Reference Include="assembly_guiutils, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(PublicizedAssemblies)\assembly_guiutils_publicized.dll</HintPath>
+    <Reference Include="assembly_guiutils">
+      <HintPath>..\valheimdll\assembly_guiutils_publicized.dll</HintPath>
     </Reference>
-    <Reference Include="assembly_valheim, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(PublicizedAssemblies)\assembly_valheim_publicized.dll</HintPath>
+    <Reference Include="assembly_lux">
+      <HintPath>..\valheimdll\assembly_lux_publicized.dll</HintPath>
     </Reference>
-    <!-- Unity Engine Dependencies -->
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(ValheimManagedLibs)\UnityEngine.dll</HintPath>
+    <Reference Include="assembly_postprocessing">
+      <HintPath>..\valheimdll\assembly_postprocessing_publicized.dll</HintPath>
     </Reference>
-    <Reference
-      Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>$(ValheimManagedLibs)\UnityEngine.CoreModule.dll</HintPath>
+    <Reference Include="assembly_simplemeshcombine">
+      <HintPath>..\valheimdll\assembly_simplemeshcombine_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="assembly_sunshafts">
+      <HintPath>..\valheimdll\assembly_sunshafts_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="assembly_utils">
+      <HintPath>..\valheimdll\assembly_utils_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="assembly_valheim">
+      <HintPath>..\valheimdll\assembly_valheim_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="BepInEx">
+      <HintPath>..\valheimdll\BepInEx_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="gui_framework">
+      <HintPath>..\valheimdll\gui_framework_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\valheimdll\Unity.TextMeshPro_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\valheimdll\UnityEngine.CoreModule_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.LocalizationModule">
+      <HintPath>..\valheimdll\UnityEngine.LocalizationModule_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\valheimdll\UnityEngine.UI_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UIModule">
+      <HintPath>..\valheimdll\UnityEngine.UIModule_publicized.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>..\valheimdll\UnityEngine_publicized.dll</HintPath>
     </Reference>
   </ItemGroup>
 
   <Target Name="PreparePluginDir" AfterTargets="PrepareForBuild">
     <!-- Create the artifact output location (if it doesn't exist) -->
     <MakeDir Directories="$(DiscordConnectorDir)" Condition="!Exists('$(DiscordConnectorDir)')" />
-    <MakeDir Directories="$(DiscordConnectorDir)plugins"
-      Condition="!Exists('$(DiscordConnectorDir)plugins')" />
+    <MakeDir Directories="$(DiscordConnectorDir)plugins" Condition="!Exists('$(DiscordConnectorDir)plugins')" />
     <!-- Make a reference to children of the output location -->
     <ItemGroup>
       <OldBuildArtifacts Include="$(DiscordConnectorDir)**\*" />
@@ -99,22 +124,17 @@
       <ThunderstoreMetadata Include="$(MetadataDir)README.md" />
     </ItemGroup>
     <!-- Plugin files go into a 'plugins' subdirectory -->
-    <Copy SourceFiles="@(BuiltLibraryAndDeps)" DestinationFolder="$(DiscordConnectorDir)plugins"
-      SkipUnchangedFiles="true" />
+    <Copy SourceFiles="@(BuiltLibraryAndDeps)" DestinationFolder="$(DiscordConnectorDir)plugins" SkipUnchangedFiles="true" />
     <!-- Metadata files go into the base directory -->
-    <Copy SourceFiles="@(ThunderstoreMetadata)" DestinationFolder="$(DiscordConnectorDir)"
-      SkipUnchangedFiles="true" />
+    <Copy SourceFiles="@(ThunderstoreMetadata)" DestinationFolder="$(DiscordConnectorDir)" SkipUnchangedFiles="true" />
     <!-- Copying the changelog involves renaming to all uppercase, hence it has its own Copy task -->
-    <Copy SourceFiles="$(DocsDir)changelog.md"
-      DestinationFiles="$(DiscordConnectorDir)CHANGELOG.md" SkipUnchangedFiles="true" />
+    <Copy SourceFiles="$(DocsDir)changelog.md" DestinationFiles="$(DiscordConnectorDir)CHANGELOG.md" SkipUnchangedFiles="true" />
   </Target>
 
   <Target Name="ZipPlugin" AfterTargets="CopyPluginFiles">
     <!-- Remove the zip file if it exists, so that we can create a new one. -->
-    <Delete Files="$(BinDir)DiscordConnector.zip"
-      Condition="Exists('$(BinDir)DiscordConnector.zip')" />
+    <Delete Files="$(BinDir)DiscordConnector.zip" Condition="Exists('$(BinDir)DiscordConnector.zip')" />
     <!-- Zip the plugin so its ready for Thunderstore -->
-    <ZipDirectory SourceDirectory="$(DiscordConnectorDir)"
-      DestinationFile="$(BinDir)DiscordConnector.zip" />
+    <ZipDirectory SourceDirectory="$(DiscordConnectorDir)" DestinationFile="$(BinDir)DiscordConnector.zip" />
   </Target>
 </Project>
